--- a/popup/popup.html
+++ b/popup/popup.html
@@ -22,8 +22,16 @@
                 <input type="radio" name="size" value="2.2" id="female4"/><label for="female4">220%</label>
                 <input type="radio" name="size" value="2.6" id="female5"/><label for="female5">260%</label>
             </li>
+            <li class="changeDisplay radioInput">
+                <span>display:</span>
+                <input type="radio" name="size" value="none" id="hidden"/><label for="hidden">hidden</label>
+            </li>
             <li class="changeColor">
                 <span>color:</span>
+                <input type="text" placeholder="#ffffff" maxlength="7"/>
+            </li>
+            <li class="changeBackgroundColor">
+                <span>backgroundColor:</span>
                 <input type="text" placeholder="#ffffff" maxlength="7"/>
             </li>
             <li class="changeFontSize">
