--- a/popup/popup.html
+++ b/popup/popup.html
@@ -60,7 +60,7 @@
             </li>
             <li class="text-area">
                 <p><span>special style:</span> <button class="copyBtn">copy</button></p>
-                <textarea rows="6" cols="120" class="specialStyleTextArea" disabled></textarea>
+                <textarea rows="6" cols="120" class="specialStyleTextArea" readonly></textarea>
             </li>
         </ul>
     </div>
