--- a/popup/popup.html
+++ b/popup/popup.html
@@ -74,7 +74,7 @@
         <p class="customType" style="margin-top: 40px">Special Script：</p>
         <ul>
             <li class="changeText">
-                <span>text:</span>
+                <span>replace text:</span>
                 <input type="text" placeholder="hello" maxlength="70"/>
             </li>
             <li class="changeReplaceUrl">
