--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,7 +5,7 @@
     <title>AM custom</title>
 </head>
 <link rel="stylesheet" href="./custom.css">
-<body>
+<body style="min-width: 200px">
 <div class="testText" style="width: 36%">
     <p class="test_p1">2019年01月07日14:32:11</p>
     <a class="test_p2" href="www.baidu.com">测试</a>
