--- a/popup/popup.html
+++ b/popup/popup.html
@@ -6,9 +6,7 @@
 </head>
 <link rel="stylesheet" href="./custom.css">
 <body>
-
+    <button>show</button>
 </body>
 </html>
-<script src="../js/jq.js"></script>
-<script src="./content.js"></script>
-
+<script src="./connect.js"></script>
