--- a/popup/popup.html
+++ b/popup/popup.html
@@ -10,3 +10,29 @@
 </body>
 </html>
 <script src="./connect.js"></script>
+<style>
+ body{
+    width: 250px;
+    text-align: center;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+ }
+ button{
+    border: none;
+    width: 100px;
+    height: 40px;
+    border-radius: 4px;
+    color: white;
+    cursor: pointer;
+    text-transform: uppercase;
+    outline: none;
+ }
+ .hide, .show:hover{
+     background: rgb(233, 43, 44);
+ }
+ .show, .hide:hover{
+     background: rgb(80, 47, 227);
+ }
+</style>
